recent-posts yaratildi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <!-- Header start -->
+    <!-- HEADER START -->
     <header class="header">
         <nav class="sitenav">
             <a href="index.html" class="site-logo">
@@ -37,5 +37,39 @@
             <img class="header__hero-img" src="images/header-hero-img.png" alt="Header hero img" width="243" height="243">
         </div>
     </header>
+    <!-- HEADER END -->
+
+
+    <!-- MAIN START -->
+    <div class="main-container">
+        <div class="main-header">
+            <p class="main-header-recent">Recent-posts</p>
+            <p class="main-header-view">View all</p>
+        </div>
+        <div class="main-hero-sections">
+            <div class="main-hero">
+                <P class="main-hero-making">Making a design system from scratch</P>
+                <div class="main-date">
+                   <p class="february">12 Feb 2020</p>
+                   <img class="vector" src="./images/Vector.png" alt="ustun">
+                   <p class="design">Design, Pattern</p>
+                </div>
+                <p class="main-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+            <div class="main-hero">
+                <P class="main-hero-making">Creating pixel perfect icons in Figma</P>
+                <div class="main-date">
+                   <p class="february">12 Feb 2020</p>
+                   <img class="vector" src="./images/Vector.png" alt="ustun">
+                   <p class="design">Figma, Icon Design</p>
+                </div>
+                <p class="main-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- MAIN END -->
+
 </body>
 </html>
