--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                 <h1 class="header__hero-info-title">
                     Hi, I am John, <br> Creative Technologist
                 </h1>
-                <p class="header__hero-info-paragraph">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <p class="header__hero-info-paragraph">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                    amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+                    nostrud amet.</p>
                 <a href="#" class="header__hero-info-btn">Download Resume</a>
             </div>
-            <img class="header__hero-img" src="images/header-hero-img.png" alt="Header hero img" width="243" height="243">
+            <img class="header__hero-img" src="images/header-hero-img.png" alt="Header hero img" width="243"
+                height="243">
         </div>
     </header>
     <!-- HEADER END -->
@@ -50,29 +53,78 @@
             <div class="main-hero">
                 <P class="main-hero-making">Making a design system from scratch</P>
                 <div class="main-date">
-                   <p class="february">12 Feb 2020</p>
-                   <img class="vector" src="./images/Vector.png" alt="ustun">
-                   <p class="design">Design, Pattern</p>
+                    <p class="february">12 Feb 2020</p>
+                    <img class="vector" src="./images/Vector.png" alt="ustun">
+                    <p class="design">Design, Pattern</p>
                 </div>
-                <p class="main-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                <p class="main-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                 </p>
             </div>
             <div class="main-hero">
                 <P class="main-hero-making">Creating pixel perfect icons in Figma</P>
                 <div class="main-date">
-                   <p class="february">12 Feb 2020</p>
-                   <img class="vector" src="./images/Vector.png" alt="ustun">
-                   <p class="design">Figma, Icon Design</p>
+                    <p class="february">12 Feb 2020</p>
+                    <img class="vector" src="./images/Vector.png" alt="ustun">
+                    <p class="design">Figma, Icon Design</p>
                 </div>
-                <p class="main-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                <p class="main-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                 </p>
             </div>
         </div>
     </div>
     <!-- MAIN END -->
 
-    <!-- SECTION START -->
-    <!-- SECTION END -->
 
+    <!-- SECTION START -->
+    <div class="section-container">
+        <p class="section-header">Featured works</p>
+        <div class="section-hero">
+            <img class="section-rectangle" src="./images/Rectangle.png" alt="Rectangle" width="246" height="180">
+            <div class="section-texts">
+                <p class="section-hero-text">Designing Dashboards</p>
+                <div class="section-hero-dashborad">
+                    <p class="section-date">2020</p>
+                    <p class="section-dashboard">Dashboard</p>
+                </div>
+                <p class="section-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.</p>
+            </div>
+        </div>
+        <p class="vector-footer"></p>
+    </div>
+
+
+    <div class="section-container">
+        <div class="section-hero">
+            <img class="section-rectangle" src="./images/girl-rectangle.png" alt="Rectangle" width="246" height="180">
+            <div class="section-texts">
+                <p class="section-hero-text">Vibrant Portraits of</p>
+                <div class="section-hero-dashborad">
+                    <p class="section-date">2018</p>
+                    <p class="section-dashboard">Illustration</p>
+                </div>
+                <p class="section-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.Velit <br> officia consequat duis enim velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.</p>
+            </div>
+        </div>
+        <p class="vector-footer"></p>
+    </div>
+
+
+    <div class="section-container">
+        <div class="section-hero">
+            <img class="section-rectangle" src="./images/Rectangle-a.png" alt="Rectangle" width="246" height="180">
+            <div class="section-texts">
+                <p class="section-hero-text">36 Days of Malayalam type</p>
+                <div class="section-hero-dashborad">
+                    <p class="section-date">2018</p>
+                    <p class="section-dashboard">Typography</p>
+                </div>
+                <p class="section-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet <br> sint.Velit officia consequat duis enim velit mollit. Exercitation veniam <br> consequat sunt  nostrud amet.</p>
+            </div>
+        </div>
+        <p class="vector-footer"></p>
+    </div>
+    <!-- SECTION END -->
 </body>
 </html>
