--- a/blog.html
+++ b/blog.html
@@ -23,5 +23,63 @@
             </li>
         </ul>
     </nav>
+
+    <!-- HERO START -->
+    <div class="blog-container">
+        <p class="hero-blog">Blog</p>
+        <p class="hero-blog-text">UI Interactions of the week</p>
+        <div class="hero-blog-date">
+            <p class="february">12 Feb 2019</p>
+            <img class="vector" src="./images/Vector.png" alt="ustun">
+            <p class="design2">Express, Handlebars</p>
+        </div>
+        <div class="blog-footer">
+            <p class="hero-blog-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="vector-footer2"></p>
+        </div>
+    </div>
+
+    
+    <div class="blog-container">
+        <p class="hero-blog-text">UI Interactions of the week</p>
+        <div class="hero-blog-date">
+            <p class="february">12 Feb 2019</p>
+            <img class="vector" src="./images/Vector.png" alt="ustun">
+            <p class="design2">Express, Handlebars</p>
+        </div>
+        <div class="blog-footer">
+            <p class="hero-blog-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="vector-footer2"></p>
+        </div>
+    </div>
+
+
+    <div class="blog-container">
+        <p class="hero-blog-text">UI Interactions of the week</p>
+        <div class="hero-blog-date">
+            <p class="february">12 Feb 2019</p>
+            <img class="vector" src="./images/Vector.png" alt="ustun">
+            <p class="design2">Express, Handlebars</p>
+        </div>
+        <div class="blog-footer">
+            <p class="hero-blog-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="vector-footer2"></p>
+        </div>
+    </div>
+
+
+    <div class="blog-container">
+        <p class="hero-blog-text">UI Interactions of the week</p>
+        <div class="hero-blog-date">
+            <p class="february">12 Feb 2019</p>
+            <img class="vector" src="./images/Vector.png" alt="ustun">
+            <p class="design2">Express, Handlebars</p>
+        </div>
+        <div class="blog-footer">
+            <p class="hero-blog-footer">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="vector-footer2"></p>
+        </div>
+    </div>
+    <!-- HERO END -->
 </body>
 </html>
